Mobile heading and background

--- a/index.html
+++ b/index.html
@@ -8,8 +8,45 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="dist/css/reset.css">
 		<link rel="stylesheet" href="dist/css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Saira:400,700&display=swap" rel="stylesheet">
 	</head>
 	<body>
+		<nav>
+			<img src="./Design Assets/logo-game-black.png">
+			<div class="hamburger-menu">
+				<div class="burger"></div>
+				<div class="burger"></div>
+				<div class="burger"></div>
+			</div>
+			<ul class="navigation">
+				<li>Home</li>
+				<li>About</li>
+				<li>Trailer</li>
+				<li>Characters</li>
+				<li>Wallpaper</li>
+			</ul>
+		</nav>
+		<aside class="sm-links">
+			<div class="twitter-link"></div>
+			<div class="insta-link"></div>
+			<div class="facebook-link"></div>
+			<div class="youtube-link"></div>
+		</aside>
+		<header>
+			<div class="logo logo-black"></div>
+			<div></div>
+			<div class="animation-enter"></div>
+		</header>
+		<main>
+			<div class="logo logo-color"></div>
+			<section class="about"></section>
+			<section class="trailer"></section>
+			<section class="characters"></section>
+			<section class="wallpaper"></section>
+		</main>
+
+
+
 		<script src="./dist/js/main.js"></script>
 	</body>
 </html>
