Uploaded resources, beginning platform select

--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
 			<div class="insta-link"></div>
 			<div class="facebook-link"></div>
 			<div class="youtube-link"></div>
+			<i></i>
 		</aside>
 		<header>
-			<div class="logo logo-black"></div>
-			<div></div>
+			<div class="container-home">
+				<div class="platform-select">
+					<div class="platform ps4"></div>
+					<div class="platform xbox animation-enter"></div>
+					<div class="platform pc animation-off-right"></div>
+				</div>
+			</div>
 			<div class="animation-enter"></div>
 		</header>
 		<main>
