Platform select and hero image

--- a/index.html
+++ b/index.html
@@ -34,14 +34,32 @@
 			<i></i>
 		</aside>
 		<header>
-			<div class="container-home">
+			<section class="container-home">
 				<div class="platform-select">
 					<div class="platform ps4"></div>
 					<div class="platform xbox animation-enter"></div>
 					<div class="platform pc animation-off-right"></div>
+					<div class="platform-animation"></div>
 				</div>
-			</div>
-			<div class="animation-enter"></div>
+				<div class="platform-counter">
+					<button class="previous-slide"></button>
+					<div class="slide-counter">
+						<span class="current-slide">01</span>
+						<span>/</span>
+						<span class="total-slides">03</span>
+					</div>
+					<button class="next-slide"></button>
+				</div>			
+				<div class="hero-container">
+						<img src="./Design Assets/hero.png" class="hero">
+					<div class="trailer">
+						<div class="overlay"></div>
+						<img src="./Design Assets/hero-bg-static.webp">
+					</div>
+					<i></i>
+				</div>	
+			</section>
+			<section class="animation-enter container-home"></section>
 		</header>
 		<main>
 			<div class="logo logo-color"></div>
