--- a/index.html
+++ b/index.html
@@ -45,13 +45,20 @@
 					<button class="previous-slide"></button>
 					<div class="slide-counter">
 						<span class="current-slide">01</span>
-						<span>/</span>
+						<span class = "slash">/</span>
 						<span class="total-slides">03</span>
 					</div>
 					<button class="next-slide"></button>
 				</div>			
 				<div class="hero-container">
-						<img src="./Design Assets/hero.png" class="hero">
+					<img src="./Design Assets/hero.png" class="hero">
+					<div class="hero-text">
+						<span class="two">2</span>
+						<span class="zero">0</span>
+						<span class="seven">7</span>
+						<span class="seven">7</span>
+					</div>
+					<div class="trailer-border"></div>
 					<div class="trailer">
 						<div class="overlay"></div>
 						<img src="./Design Assets/hero-bg-static.webp">
