Mobile homepage version 1

--- a/index.html
+++ b/index.html
@@ -64,7 +64,27 @@
 						<img src="./Design Assets/hero-bg-static.webp">
 					</div>
 					<i></i>
+					<div class="button-container-home">
+						<button class="pre-order">Pre order now</button>
+						<button class="watch-trailer">Watch trailer</button>
+					</div>
+					<div class="next-hero-preview">2</div>
 				</div>	
+				<div class="hero-counter">
+					<button class="previous-slide"></button>
+					<div class="slide-counter">
+						<span class="current-slide">01</span>
+						<span class = "slash">/</span>
+						<span class="total-slides">02</span>
+					</div>
+					<button class="next-slide"></button>
+				</div>	
+				<div class="scroll-indicator">
+					<div></div>
+					<div></div>
+					<div></div>
+				</div>
+				<div class="share-btn-mobile"></div>
 			</section>
 			<section class="animation-enter container-home"></section>
 		</header>
