About page mobile

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="dist/css/reset.css">
 		<link rel="stylesheet" href="dist/css/main.css">
-		<link href="https://fonts.googleapis.com/css?family=Saira:400,700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Saira:400,500,600,700&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<nav>
-			<img src="./Design Assets/logo-game-black.png">
+			<img src="./Design Assets/logo-game-yellow.png">
 			<div class="hamburger-menu">
 				<div class="burger"></div>
 				<div class="burger"></div>
@@ -31,7 +31,6 @@
 			<div class="insta-link"></div>
 			<div class="facebook-link"></div>
 			<div class="youtube-link"></div>
-			<i></i>
 		</aside>
 		<header>
 			<section class="container-home">
@@ -89,11 +88,19 @@
 			<section class="animation-enter container-home"></section>
 		</header>
 		<main>
-			<div class="logo logo-color"></div>
-			<section class="about"></section>
-			<section class="trailer"></section>
-			<section class="characters"></section>
-			<section class="wallpaper"></section>
+			<section class="about container">
+				<div class="about-hero"></div>
+				<div class="about-content">
+					<h1>The real you is not enough</h1>
+					<i></i>
+					<div class="about-paragraph-container">
+						<p>Cyberpunk 2077 is an open-world, action-adventure story set in Night City, a megalopolis obsessed with power, glamour and body modification. You play as V, a mercenary outlaw going after a one-of-a-kind implant that is the key to immortality. You can customize your character’s cyberware, skillset and playstyle, and explore a vast city where the choices you make shape the story and the world around you.</p>
+					</div>
+				</div>
+			</section>
+			<section class="trailer "></section>
+			<section class="characters "></section>
+			<section class="wallpaper "></section>
 		</main>
 
 
