Desktop layout for about, trailer, and characters

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 		</header>
 		<main>
 			<section class="about container" data-info="About">
+				<div class="breadcrumbs">About</div>
+				<div class="about-image beveled-frame"></div>
+				<div class="about-image-overlay"></div>
 				<div class="about-hero"></div>
 				<div class="about-content">
 					<h1>The real you is not enough</h1>
@@ -106,6 +109,7 @@
 				</div>
 			</section>
 			<section class="trailer container" data-info="Trailer">
+				<div class="breadcrumbs">Trailer</div>
 				<video loop muted autoplay poster="./Design Assets/preview-frame.jpg" class="fullscreen-video">
 					<source src="./Design Assets/preview-loop.mp4" type="video/mp4">
 				</video>
@@ -115,8 +119,9 @@
 				<ul class="slideshow container-no-bg">
 					<div class="breadcrumbs animation-enter">Characters</div>
 					<div class="back-button">Back</div>
-					<li class="slide container v animation-enter">
-						<div class="character-preview v"></div>
+					<li class="slide container-no-bg v ">
+						<div class="character-preview beveled-frame v"></div>
+						<div class="character-preview-overlay"></div>
 						<div class="character-image v"></div>	
 						<h1 class="character-name">V</h1>		
 						<i class="characters-divider"></i>		
@@ -125,7 +130,8 @@
 						</p>	
 					</li>		
 					<li class="slide container-no-bg dexter animation-enter">
-						<div class="character-preview dexter"></div>	
+						<div class="character-preview beveled-frame dexter"></div>	
+						<div class="character-preview-overlay"></div>
 						<div class="character-image dexter"></div>							
 						<h1 class="character-name">Dexter <br> Deshawn</h1>		
 						<i class="characters-divider"></i>		
@@ -133,8 +139,9 @@
 								Fixers like Dexter juggle illegal contracts—burglaries, assassinations, kidnappings, trafficking, you name it. And Dex is one of the best fixers in town. Hardly anything goes in Night City that he doesn't know about. He’s got killer intuition and the experience to match – word on the street is anyone who manages their first job for Dex is sure to go far.
 						</p>	
 					</li>	
-					<li class="slide container-no-bg jackie animation-enter">
-						<div class="character-preview jackie"></div>	
+					<li class="slide container-no-bg jackie animation-enter ">
+						<div class="character-preview beveled-frame jackie"></div>	
+						<div class="character-preview-overlay"></div>
 						<div class="character-image jackie"></div>	
 						<h1 class="character-name">Jackie <br> Welles</h1>		
 						<i class="characters-divider"></i>		
@@ -142,8 +149,9 @@
 							As a teenager Jackie always wanted to be his own master, so he eventually settled on a career as mercenary. Friendship, loyalty and family ties are what drives him. To Jackie, blood is always thicker than water. He’s a rock-solid, composed professional who respects other mercs. Eventually he wants to provide for his own family and live in luxury, but he’s getting impatient because this is still just an elusive dream.
 						</p>	
 					</li>	
-					<li class="slide container-no-bg johnny ">
-						<div class="character-preview johnny"></div>	
+					<li class="slide container-no-bg johnny animation-enter">
+						<div class="character-preview beveled-frame johnny"></div>	
+						<div class="character-preview-overlay"></div>
 						<div class="character-image johnny"></div>	
 						<div class="character-second-image johnny"></div>
 						<h1 class="character-name">Johnny <br> Silverhand</h1>		
@@ -153,6 +161,7 @@
 						</p>	
 					</li>					
 					<button class="read-more">More</button>
+					<i class="character-counter-divider"></i>
 					<div class="character-counter">
 						<button class="previous-slide"></button>
 						<div class="slide-counter">
