Beginning to debut responsive

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						</div>
 						<div class="trailer-border"></div>
 						<div class="trailer-container">
-							<video loop muted autoplay poster="./Design Assets/preview-frame.jpg" class="fullscreen-video">
+							<video loop muted autoplay poster="./Design Assets/preview-frame.jpg" class="homepage-video">
 								<source src="./Design Assets/preview-loop.mp4" type="video/mp4">
 							</video>
 							<img src="./Design Assets/hero-bg-static.webp">
@@ -116,7 +116,7 @@
 				<div class="play-button"></div>
 			</section>
 			<section class="characters container" data-info="Characters">
-				<ul class="slideshow container-no-bg">
+				<ul class="slideshow container-no-bg ">
 					<div class="breadcrumbs animation-enter">Characters</div>
 					<div class="back-button">Back</div>
 					<li class="slide container-no-bg v ">
@@ -129,7 +129,7 @@
 							This is the protagonist, which unlike Geralt in The Witcher 3 , we can customize to start the game with a complex character creation system which allows us to choose their sex (in the E3 demo was a woman) to create a argumental background. We can also choose between different classes: Netrunner , Techie , Solo or a mixture of all of them.
 						</p>	
 					</li>		
-					<li class="slide container-no-bg dexter animation-enter">
+					<li class="slide container-no-bg dexter animation-enter animation-coming-next">
 						<div class="character-preview beveled-frame dexter"></div>	
 						<div class="character-preview-overlay"></div>
 						<div class="character-image dexter"></div>							
@@ -139,7 +139,7 @@
 								Fixers like Dexter juggle illegal contracts—burglaries, assassinations, kidnappings, trafficking, you name it. And Dex is one of the best fixers in town. Hardly anything goes in Night City that he doesn't know about. He’s got killer intuition and the experience to match – word on the street is anyone who manages their first job for Dex is sure to go far.
 						</p>	
 					</li>	
-					<li class="slide container-no-bg jackie animation-enter ">
+					<li class="slide container-no-bg jackie animation-enter animation-coming-second">
 						<div class="character-preview beveled-frame jackie"></div>	
 						<div class="character-preview-overlay"></div>
 						<div class="character-image jackie"></div>	
@@ -149,7 +149,7 @@
 							As a teenager Jackie always wanted to be his own master, so he eventually settled on a career as mercenary. Friendship, loyalty and family ties are what drives him. To Jackie, blood is always thicker than water. He’s a rock-solid, composed professional who respects other mercs. Eventually he wants to provide for his own family and live in luxury, but he’s getting impatient because this is still just an elusive dream.
 						</p>	
 					</li>	
-					<li class="slide container-no-bg johnny animation-enter">
+					<li class="slide container-no-bg johnny animation-enter animation-coming-third">
 						<div class="character-preview beveled-frame johnny"></div>	
 						<div class="character-preview-overlay"></div>
 						<div class="character-image johnny"></div>	
@@ -177,21 +177,27 @@
 				<div class="breadcrumbs">Wallpaper</div>
 				<ul class="slideshow container-no-bg">
 					<li class="wallpaper-container" >
-						<div class="wallpaper-preview wp-1"></div>
+						<div class="wallpaper-overlay"></div>
+						<div class="active wallpaper-preview wp-1"></div>
 					</li>
 					<li class="wallpaper-container animation-enter">
+						<div class="wallpaper-overlay"></div>
 						<div class="wallpaper-preview wp-2"></div>
 					</li>
 					<li class="wallpaper-container animation-enter">
+						<div class="wallpaper-overlay"></div>
 						<div class="wallpaper-preview wp-3"></div>
 					</li>
 					<li class="wallpaper-container animation-enter">
+						<div class="wallpaper-overlay"></div>		
 						<div class="wallpaper-preview wp-4"></div>
 					</li>
 					<li class="wallpaper-container animation-enter">
+						<div class="wallpaper-overlay"></div>
 						<div class="wallpaper-preview wp-5"></div>
 					</li>
 					<li class="wallpaper-container animation-enter">
+						<div class="wallpaper-overlay"></div>
 						<div class="wallpaper-preview wp-6"></div>
 					</li>
 				</ul>
@@ -201,7 +207,7 @@
 					<div class="slide-counter">
 						<span class="current-slide">01</span>
 						<span class = "slash">/</span>
-						<span class="total-slides">04</span>
+						<span class="total-slides">06</span>
 					</div>
 					<button class="next-slide"></button>
 				</div>				
