--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 				<div class="hero-container">
 					<div class="centering-div">
 						<img src="./Design Assets/hero.png" class="hero">
+						<div class="platform-spacer"></div>
 						<div class="hero-text">
 							<span class="two">2</span>
 							<span class="zero">0</span>
