--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 						<img src="./Design Assets/hero.png" class="hero">
 						<div class="platform-spacer"></div>
 						<div class="hero-text">
-							<span class="two">2</span>
-							<span class="zero">0</span>
-							<span class="seven">7</span>
-							<span class="seven">7</span>
+							<span class="hero-numbers two">2</span>
+							<span class="hero-numbers zero">0</span>
+							<span class="hero-numbers seven">7</span>
+							<span class="hero-numbers seven">7</span>
 						</div>
 						<div class="trailer-border"></div>
 						<div class="trailer-container">
@@ -102,7 +102,7 @@
 				<div class="about-image-overlay"></div>
 				<div class="about-hero"></div>
 				<div class="about-content">
-					<h1>The real you is not enough</h1>
+					<h1 class="about-headline">The real you is not enough</h1>
 					<i></i>
 					<div class="about-paragraph-container">
 						<p>Cyberpunk 2077 is an open-world, action-adventure story set in Night City, a megalopolis obsessed with power, glamour and body modification. You play as V, a mercenary outlaw going after a one-of-a-kind implant that is the key to immortality. You can customize your character’s cyberware, skillset and playstyle, and explore a vast city where the choices you make shape the story and the world around you.</p>
@@ -215,8 +215,15 @@
 			</section>
 		</main>
 
-
-
+		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSRulePlugin.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+		<script src="./dist/js/CustomEase.min.js"></script>
+		<script src="./dist/js/splittext.min.js"></script>
 		<script src="./dist/js/main.js"></script>
 	</body>
 </html>
