--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 				<div class="burger"></div>
 			</div>
 			<ul class="navigation">
-				<li class="active">Home</li>
-				<li>About</li>
-				<li>Trailer</li>
-				<li>Characters</li>
-				<li>Wallpaper</li>
+				<li id="home" class="active">Home</li>
+				<li id="about">About</li>
+				<li id="trailer">Trailer</li>
+				<li id="characters">Characters</li>
+				<li id="wallpaper">Wallpaper</li>
 			</ul>
 		</nav>		
 		<aside class="sm-links">
