Fixed bugs in responsiveness at higher resolutions

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		</aside>
 		<header>
 			<section class="container-home">
+				<a id="homeLink"></a>
 				<div class="platform-select">
 					<div class="platform ps4"></div>
 					<div class="platform xbox animation-enter"></div>
@@ -97,6 +98,7 @@
 		</header>
 		<main>
 			<section class="about container" data-info="About">
+				<a id="aboutLink"></a>
 				<div class="breadcrumbs">About</div>
 				<div class="about-image beveled-frame"></div>
 				<div class="about-image-overlay"></div>
@@ -110,6 +112,7 @@
 				</div>
 			</section>
 			<section class="trailer container" data-info="Trailer">
+				<a id="trailerLink"></a>
 				<div class="breadcrumbs">Trailer</div>
 				<video loop muted autoplay poster="./Design Assets/preview-frame.jpg" class="fullscreen-video">
 					<source src="./Design Assets/preview-loop.mp4" type="video/mp4">
@@ -117,6 +120,7 @@
 				<div class="play-button"></div>
 			</section>
 			<section class="characters container" data-info="Characters">
+				<a id="charactersLink"></a>
 				<ul class="slideshow container-no-bg ">
 					<div class="breadcrumbs animation-enter">Characters</div>
 					<div class="back-button">Back</div>
@@ -175,6 +179,7 @@
 				</ul>
 			</section>
 			<section class="wallpaper container" data-info="Wallpaper">
+				<a id="wallpaperLink"></a>
 				<div class="breadcrumbs">Wallpaper</div>
 				<ul class="slideshow container-no-bg">
 					<li class="wallpaper-container" >
@@ -218,8 +223,8 @@
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSRulePlugin.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 		<script src="./dist/js/CustomEase.min.js"></script>
