Front page finished and cleaned up code

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 			<section class="container-home">
 				<a id="homeLink"></a>
 				<div class="platform-select">
-					<div class="platform ps4"></div>
+					<div class="platform ps4 selected"></div>
+					<div class="platform-animation ps4 selected"></div>
 					<div class="platform xbox animation-enter"></div>
+					<div class="platform-animation xbox"></div>
 					<div class="platform pc animation-off-right"></div>
-					<div class="platform-animation"></div>
+					<div class="platform-animation pc"></div>
 				</div>
 				<div class="platform-counter">
 					<button class="previous-slide"></button>
@@ -75,17 +77,17 @@
 						<button class="pre-order">Pre order now</button>
 						<button class="watch-trailer">Watch trailer</button>
 					</div>
-					<div class="next-hero-preview">2</div>
+					<div class="next-hero-preview"></div>
 					<div class="hero-divider"></div>
 				</div>	
 				<div class="hero-counter">
-					<button class="previous-slide"></button>
+					<button class="previous-slide previous-hero-button"></button>
 					<div class="slide-counter">
-						<span class="current-slide">01</span>
+						<span class="current-hero-counter">01</span>
 						<span class = "slash">/</span>
 						<span class="total-slides">02</span>
 					</div>
-					<button class="next-slide"></button>
+					<button class="next-slide next-hero-button"></button>
 				</div>	
 				<div class="scroll-indicator">
 					<div></div>
@@ -94,7 +96,6 @@
 				</div>
 				<div class="share-btn-mobile"></div>
 			</section>
-			<section class="animation-enter container-home"></section>
 		</header>
 		<main>
 			<section class="about container" data-info="About">
